# ValidBraces

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  README.md  ValidBraces  cmake_install.cmake  test_stack
libs/: ValidBraces.c  stack.c
libs/headers/: ValidBraces.h  stack.h
src/: main.c
src/headers/: main.h
tests/: test_main.c  test_stack_library.c
